--- a/static/lib/app/common/partials/login_modal.html
+++ b/static/lib/app/common/partials/login_modal.html
@@ -35,11 +35,11 @@
                             <div class="col-md-8 col-md-offset-2">
                                 <div class="form-group">
                                     <input type="email" ng-model="formData.email" class="form-control" maxlength="50" placeholder="Twój Email *" id="email" required data-validation-required-message="Wpisz swój adres email." data-validation-email-message="Niepoprawny adres email">
-                                    <p class="help-block text-danger"></p>
+                                    <p class="help-block text-danger text-left"></p>
                                 </div>
                                 <div class="form-group">
                                     <input type="password" ng-model="formData.password" class="form-control" maxlength="50" placeholder="Twoje hasło *" id="password" required data-validation-required-message="Wpisz swoje hasło.">
-                                    <p class="help-block text-danger"></p>
+                                    <p class="help-block text-danger text-left"></p>
                                 </div>
 
                             </div>
