--- a/static/css/less/agency.less
+++ b/static/css/less/agency.less
@@ -738,3 +738,7 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: @brand-primary;
 }
+
+.no-bottom-padding{
+  	padding-bottom: 0px !important;
+}
