--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,5 +1,5 @@
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top navbar-shrink">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -38,7 +38,7 @@
                     {% endif %}
                     {% if request.user.is_authenticated %}
                         <li>
-                            <a class="" href="#" ng-click=""><i class="fa fa-th-list"></i> Moje listy</a>
+                            <a class="" href="{% url 'wishes:my_lists' %}" ng-click=""><i class="fa fa-th-list"></i> Moje listy</a>
                         </li>
                         <li ng-controller="authCtrl">
                             <a class="" href="#" ng-click="logout()"><i class="fa fa-power-off"></i> Wyloguj</a>
