--- a/templates/base/wishes_navbar.html
+++ b/templates/base/wishes_navbar.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><i class="fa fa-gift"></i>
+                <a class="navbar-brand page-scroll" href="{% url "core:home" %}#page-top"><i class="fa fa-gift"></i>
  WishesList</a>
             </div>
 
@@ -17,7 +17,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
-                        <a href="#page-top"></a>
+                        <a href="{% url "core:home" %}#page-top"></a>
                     </li>
                     {% if request.user.is_authenticated %}
                         <li ng-controller="ModalCtrl">
