--- a/templates/wishes/my_lists.html
+++ b/templates/wishes/my_lists.html
@@ -7,14 +7,44 @@
 {% endblock %}
 {% block content %}
 {% get_site_settings as settings %}
-<!-- Header -->
     <header>
         <div class="container">
-            <div class="intro-text">
-                <div class="intro-lead-in">Strona o podanym adresie nie istnieje!</div>
-                <div class="intro-heading"><i class="fa fa-exclamation"></i> 404</div>
-                <a href="{% url "core:home" %}" class="page-scroll btn btn-xl">Powrót na stronę główną</a>
+            <div class="intro-text no-bottom-padding">
             </div>
         </div>
     </header>
+    <section id="myLists" class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Moje listy</h2>
+                    <h3 class="section-subheading text-muted">Zestawienie wszystkich Twoich list życzeń.</h3>
+                </div>
+            </div>
+            <div class="container">
+                {% for event in events %}
+
+
+                    <div class="row">
+                        <div class="col-md-8">
+                            <h4>{{ event.name |truncatewords:5 }} dnia: {{ event.date|date:"SHORT_DATE_FORMAT"  }}</h4>
+                        </div>
+                        <div class="col-md-4 actions">
+                            <div class="btn-group" role="group" aria-label="...">
+                              <button type="button" class="btn btn-default">Left</button>
+                              <button type="button" class="btn btn-default">Middle</button>
+                              <button type="button" class="btn btn-default">Right</button>
+                            </div>
+                        </div>
+                    </div>
+
+                {% endfor %}
+            </div>
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <a href="catalog/" class="btn btn-xl">Zobacz cały katalog</a>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
