terms + my profile

--- a/static/css/less/mixins.less
+++ b/static/css/less/mixins.less
@@ -65,3 +65,10 @@
 	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	text-transform: uppercase;
 }
+
+.translate (@x, @y:0) {
+	-webkit-transform:       translate(@x, @y);
+	-moz-transform: 	 translate(@x, @y);
+	-ms-transform: 		 translate(@x, @y);
+	-o-transform: 		 translate(@x, @y);
+}
