--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -16,7 +16,7 @@
             </div>
             <div class="col-md-4">
                 <ul class="list-inline quicklinks">
-                    <li><a href="#">Regulamin</a>
+                    <li><a href="{% url 'core:terms' %}">Regulamin</a>
                     </li>
                 </ul>
             </div>
