--- a/static/css/styles.less
+++ b/static/css/styles.less
@@ -1,1 +1,33 @@
 @import "less/agency";
+
+//about icons
+.icon-container{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  i{
+    position: absolute;
+    left: 50%;
+    top:50%;
+    .translate(-50%,-50%)
+  }
+}
+
+//terms
+.terms{
+  list-style: none;
+  li{
+    a{
+      font-size: 20px;
+    }
+  }
+}
+
+//go-up
+.go-up{
+  right: 20px;
+  bottom: 20px;
+  &.affix{
+    display:block;
+  }
+}
