--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,8 @@
 {% extends "base/base.html" %}
 {% load thumbnail %}
 {% load core_tags %}
+{% block navbar %}
+{% endblock %}
 {% block content %}
 {% get_site_settings as settings %}
 <!-- Header -->
