--- a/templates/users/my_profile.html
+++ b/templates/users/my_profile.html
@@ -16,7 +16,7 @@ Zmień ustawienia</a>
                 <div class="intro-lead-in"></div>
                 <div class="intro-lead-in">lub</div>
                 <a href="#about" class="page-scroll btn btn-xl"><i class="fa fa-chevron-down"></i>
- Zobacz podsumowanie swojego profilu!</a>
+ Zobacz podsumowanie</a>
             </div>
         </div>
     </header>
@@ -112,5 +112,5 @@ Zmień ustawienia</a>
             </div>
         </div>
     </section>
-    <a href="#about-header" class="go-up page-scroll btn btn-primary" data-spy="affix" data-offset-top="800"><i class="fa fa-chevron-up fa-3x"></i></a>
+    <a href="#about-header" class="go-up page-scroll btn btn-primary" data-spy="affix" data-offset-top="800"><i class="fa fa-chevron-up fa-2x"></i></a>
 {% endblock %}
