--- a/static/lib/app/common/partials/register_modal.html
+++ b/static/lib/app/common/partials/register_modal.html
@@ -54,15 +54,14 @@
                                     <p class="help-block text-danger text-left"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" ng-model="formData.email" class="form-control"
+                                    <input type="text" ng-model="formData.email" class="form-control"
                                            maxlength="50"
                                            placeholder="Twój Email *"
                                            id="email"
                                            name="email"
                                            required
                                            data-validation-ajax-ajax="/api/validators/email"
-                                           data-validation-required-message="Wpisz swój adres email."
-                                           data-validation-email-message="Niepoprawny adres email">
+                                           data-validation-required-message="Wpisz swój adres email.">
                                     <p class="help-block text-danger text-left"></p>
                                 </div>
                                 <div class="form-group">
