--- a/static/css/styles.less
+++ b/static/css/styles.less
@@ -31,3 +31,22 @@
     display:block;
   }
 }
+
+hr{
+    -moz-border-bottom-colors: none;
+    -moz-border-image: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    border-color: #333;
+    border-style: solid none;
+    border-width: 1px 0;
+    margin: 18px 0;
+}
+
+.border-bottom{
+  border-bottom: 1px solid #333
+}
+.extra-space{
+  margin: 30px 0;
+}
