--- a/templates/wishes/my_lists.html
+++ b/templates/wishes/my_lists.html
@@ -29,8 +29,8 @@
                             <a href="{% url "wishes:list_detail" event.slug %}"><h4>{{ event.name |truncatewords:5 }}</h4></a>
                         </div>
                         <div class="col-md-4 actions">
-                            <div class="btn-group pull-right" role="group" aria-label=".">
-                              <button type="button" class="button btn btn-default"><i class="fa fa-edit"></i></button>
+                            <div class="btn-group pull-right" role="group" aria-label="." ng-controller="ModalCtrl">
+                              <button type="button" class="button btn btn-default" ng-click="showModal('common/partials/new_list_modal',{controller:'BaseModalCtrl'})"><i class="fa fa-edit"></i></button>
                               <button type="button" class="button btn btn-danger"><i class="fa fa-trash-o"></i></button>
                             </div>
                         </div>
