--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -781,7 +781,7 @@ hr {
   margin: 18px 0;
 }
 .border-bottom {
-  border-bottom: 1px solid #333;
+  border-bottom: 1px solid #fed136;
 }
 .extra-space {
   margin: 30px 0;
