--- a/static/css/styles.less
+++ b/static/css/styles.less
@@ -45,7 +45,7 @@ hr{
 }
 
 .border-bottom{
-  border-bottom: 1px solid #333
+  border-bottom: 1px solid @brand-primary;
 }
 .extra-space{
   margin: 30px 0;
