--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -101,9 +101,12 @@
     <script src="{% static "lib/app/common/controllers/AuthCtrl.js"%}"></script>
     <script src="{% static "lib/app/common/controllers/FormCtrl.js"%}"></script>
     <script src="{% static "lib/app/common/controllers/EventController.js"%}"></script>
+    <script src="{% static "lib/app/common/controllers/DeleteEventCtrl.js"%}"></script>
+    <script src="{% static "lib/app/common/controllers/AlertsCtrl.js"%}"></script>
     <script src="{% static "lib/app/common/services/apiService.js"%}"></script>
     <script src="{% static "lib/app/common/services/CurrentUserService.js"%}"></script>
     <script src="{% static "lib/app/common/services/DateFormatService.js"%}"></script>
+    <script src="{% static "lib/app/common/services/EventService.js"%}"></script>
     <script src="{% static "lib/app/common/directives/DateTimePicker.js"%}"></script>
 
 
