--- a/static/lib/app/common/partials/new_list_modal.html
+++ b/static/lib/app/common/partials/new_list_modal.html
@@ -7,7 +7,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-xs-12">
-            <div class="modal-body" ng-controller="EventCtrl" ng-init="initData()">
+            <div class="modal-body" ng-controller="EventCtrl" ng-init="initData(additionalData.idToEdit)">
                 <!-- Project Details Go Here -->
                 <h2>Nowa lista</h2>
 
@@ -79,7 +79,7 @@
                             <div class="row" ng-repeat="gift in formData.gifts track by $index">
                                 <div class="col-xs-10">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" ng-keypress="showFormData()"
+                                        <input type="text" class="form-control" ng-keypress="showFormData()" ng-keydown="initForm('#eventForm','/api/event/')"
                                                maxlength="50"
                                                placeholder="Nazwa produktu *"
                                                id="products-name-{$$index$}"
@@ -104,10 +104,10 @@
                                     </div>
                                 </div>
                                 <div class="col-xs-2" ng-show="formData.gifts.length >1">
-                                    <button type="button" class="btn btn-xl" ng-click="removeProduct($index)"><i class="fa fa-trash fa-2x"></i></button>
+                                    <button type="button" class="btn btn-danger" ng-click="removeProduct($index)"><i class="fa fa-trash fa-2x"></i></button>
                                 </div>
                             </div>
-                            <div class="col-xs-12 text-center"><button type="button" class="btn btn-xl" ng-click="addProduct()"><i class="fa fa-plus"></i> Dodaj produkt</button></div>
+                            <div class="col-xs-12 text-center"><button type="button" class="btn btn-success" ng-click="addProduct()"><i class="fa fa-plus"></i> Dodaj produkt</button></div>
 
                         </div>
                         <div class="clearfix"></div>
