--- a/templates/wishes/my_lists.html
+++ b/templates/wishes/my_lists.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="intro-text " ng-controller="ModalCtrl">
                 <div class="intro-heading">Zarządzaj swoimi listami</div>
-                <a href="#" ng-click="showModal('common/partials/new_list_modal',{controller:'BaseModalCtrl'})" class="btn btn-xl"><i class="fa fa-plus"></i> Dodaj nową</a>
+                <a href="#" ng-click="showModal('common/partials/new_list_modal',{size:'lg', controller:'BaseModalCtrl'})" class="btn btn-xl"><i class="fa fa-plus"></i> Dodaj nową</a>
                 <div class="intro-lead-in"></div>
                 <div class="intro-lead-in">lub</div>
                 <a href="#myLists" class="page-scroll btn btn-xl"><i class="fa fa-chevron-down"></i> Zobacz istniejące</a>
@@ -24,14 +24,14 @@
                 {% for event in events %}
 
 
-                    <div class="row border-bottom extra-space bottom">
+                    <div class="row border-bottom extra-space bottom" ng-controller="ModalCtrl">
                         <div class="col-md-8">
                             <a href="{% url "wishes:list_detail" event.slug %}"><h4>{{ event.name |truncatewords:5 }}</h4></a>
                         </div>
                         <div class="col-md-4 actions">
-                            <div class="btn-group pull-right" role="group" aria-label="." ng-controller="ModalCtrl">
-                              <button type="button" class="button btn btn-default" ng-click="showModal('common/partials/new_list_modal',{controller:'BaseModalCtrl'})"><i class="fa fa-edit"></i></button>
-                              <button type="button" class="button btn btn-danger"><i class="fa fa-trash-o"></i></button>
+                            <div class="btn-group pull-right" role="group" aria-label="." ng-init="info = {idToEdit:{{ event.id }},name:'{{ event.name|escapejs }}'};">
+                              <button type="button" class="button btn btn-default" ng-click="showModal('common/partials/new_list_modal',{size:'lg',controller:'BaseModalCtrl',additionalData:{idToEdit:id}})"><i class="fa fa-edit"></i></button>
+                              <button type="button" class="button btn btn-danger" ng-click="showModal('common/partials/delete_event_modal',{controller:'DeleteEventCtrl',additionalData:info})"><i class="fa fa-trash-o"></i></button>
                             </div>
                         </div>
                     </div>
