--- a/templates/users/my_profile.html
+++ b/templates/users/my_profile.html
@@ -61,7 +61,7 @@ Zmień ustawienia</a>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Znajomi:</h4>
-                                    <h4 class="subheading">3</h4>
+                                    <h4 class="subheading">{{ user.friendship_creator_set.count }}</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Pamiętaj, że listami możesz dzielić się również za pomocą linku!</p>
@@ -77,7 +77,7 @@ Zmień ustawienia</a>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>List życzeń:</h4>
-                                    <h4 class="subheading">12</h4>
+                                    <h4 class="subheading">{{ user.wishes_lists.count }}</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Właśmnie tyle razy cieszyłeś się z udanych prezentów dzięki nam</p>
@@ -93,7 +93,7 @@ Zmień ustawienia</a>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Twoje produkty</h4>
-                                    <h4 class="subheading">20</h4>
+                                    <h4 class="subheading">{{ user.user_products.count }}</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Łączna liczba produktów jakie dodałeś i tych które zostały zainspirowane dzięki nam.</p>
