--- a/templates/wishes/my_lists.html
+++ b/templates/wishes/my_lists.html
@@ -27,10 +27,11 @@
                     <div class="row border-bottom extra-space bottom" ng-controller="ModalCtrl">
                         <div class="col-md-8">
                             <a href="{% url "wishes:list_detail" event.slug %}"><h4>{{ event.name |truncatewords:5 }}</h4></a>
+                            <h5><i class="fa fa-clock-o"></i> {{ event.date|date:"d E Y H:i"}}</h5>
                         </div>
                         <div class="col-md-4 actions">
                             <div class="btn-group pull-right" role="group" aria-label="." ng-init="info = {idToEdit:{{ event.id }},name:'{{ event.name|escapejs }}'};">
-                              <button type="button" class="button btn btn-default" ng-click="showModal('common/partials/new_list_modal',{size:'lg',controller:'BaseModalCtrl',additionalData:{idToEdit:id}})"><i class="fa fa-edit"></i></button>
+                              <button type="button" class="button btn btn-default" ng-click="showModal('common/partials/new_list_modal',{size:'lg',controller:'BaseModalCtrl',additionalData:{additionalData:info}})"><i class="fa fa-edit"></i></button>
                               <button type="button" class="button btn btn-danger" ng-click="showModal('common/partials/delete_event_modal',{controller:'DeleteEventCtrl',additionalData:info})"><i class="fa fa-trash-o"></i></button>
                             </div>
                         </div>
