--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -103,6 +103,7 @@
     <script src="{% static "lib/app/common/controllers/EventController.js"%}"></script>
     <script src="{% static "lib/app/common/controllers/DeleteEventCtrl.js"%}"></script>
     <script src="{% static "lib/app/common/controllers/AlertsCtrl.js"%}"></script>
+    <script src="{% static "lib/app/common/controllers/EventListCtrl.js"%}"></script>
     <script src="{% static "lib/app/common/services/apiService.js"%}"></script>
     <script src="{% static "lib/app/common/services/CurrentUserService.js"%}"></script>
     <script src="{% static "lib/app/common/services/DateFormatService.js"%}"></script>
